fix overflow board border

--- a/src/styles/cmps/_task-preview.scss
+++ b/src/styles/cmps/_task-preview.scss
@@ -3,6 +3,7 @@
 }
 
 .task-preview {
+    width: 100%;
     display: flex;
     margin: 0;
     padding: 0;
